--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,8 +6,6 @@ services:
     restart: always
     volumes:
       - postgres-db:/var/lib/postgresql/data
-    networks:
-      - internal
     environment:
       POSTGRESQL_PASSWORD: passw0rd
     healthcheck:
@@ -21,16 +19,11 @@ services:
     container_name: mailhog
     image: mailhog/mailhog:v1.0.0
     restart: always
-    networks:
-      - internal
 
   ewallet:
     container_name: ewallet
     image: omisego/ewallet:6c1aca9
     restart: always
-    networks:
-      - internal
-      - external
     depends_on:
       - postgres
     environment:
@@ -43,9 +36,27 @@ services:
     ports:
       - 4000:4000
 
-networks:
-  external:
-  internal:
+  mgo:
+    container_name: mgo
+    image: mongo:4.0
+    restart: always
+    ports:
+      - 27017:27017
+
+  market-feed:
+    container_name: market-feed
+    build: docker-images/market-feed
+    depends_on:
+      - mgo
+
+  strategy-worker:
+    container_name: strategy-worker
+    build: docker-images/strategy-worker
+    depends_on:
+      - mgo
+      - ewallet
+    ports:
+      - 8000:8000
 
 volumes:
   postgres-db:
